--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
       <p class="muted">Haz clic en cualquier proyecto para ver una vista previa.</p>
       <div class="grid" id="projectsGrid">
         <!-- Replace images/project files with your real images -->
-        <figure class="project" data-title="Tienda Online - Proyecto 1" data-desc="Ecommerce completo, integración de pagos, responsive">
-          <img src="img/proyecto1.jpg" alt="Proyecto 1">
-          <figcaption>Proyecto 1 — Tienda Online</figcaption>
+        <figure class="project" data-title= "Café Aroma - Proyecto 1" data-desc="Ecommerce completo, integración de pagos, responsive">
+          <img src= "https://images.unsplash.com/photo-1509042239860-f550ce710b93" alt="Café 1">
+          <figcaption>Proyecto 1 Café Aroma — </figcaption>
         </figure>
         <figure class="project" data-title="Landing Page - Proyecto 2" data-desc="Landing enfocada en conversión, A/B testing">
           <img src="img/proyecto2.jpg" alt="Proyecto 2">
